updated to jquery 1.6.2, removed mercury-nojump option as it is now autodetected, fixed tooltip issue - fix #13, #2

--- a/src/styles/mercury.less
+++ b/src/styles/mercury.less
@@ -24,8 +24,10 @@ body.mercury-iframe {
 	overflow: hidden;
 }
 body.mercury-inline {
-	&.mercury-nojump {
-		position:static;
+	.mercury-toolbar-container,
+	.mercury-statusbar,
+	.mercury-toolbar {
+		display:fixed;
 	}
 	&.mercury-hidden {
 		.mercury-toolbar-container,
